assets/css/module.css
/* ... */
.btn-ghost:hover {
    border-color: var(--primary-color);
    color: var(--primary-color);
}

.btn-primary-color {
    border: none;
    background: var(--primary-color-gradient);
    color: var(--white);
}

.btn-primary-color-ghost {
    border: 1px solid var(--primary-color);
    background: transparent;
    border-radius: 3px;
    color: var(--primary-color);
    transition: all 0.5s ease;
}

.btn-primary-color-ghost:hover {
    background: var(--primary-color);
    color: var(--white);
}

.btn-secondary-color {
    border: none;
    background: var(--secondary-color-gradient);
    color: var(--white);
}

.btn-primary-color a,
.btn-secondary-color a {
    color: var(--white);
}

.btn-primary-color a:hover,
.btn-secondary-color a:hover {
    color: white;
}

.btn-primary-color:hover,
.btn-secondary-color:hover {
    opacity: 0.8;
    box-shadow: none;
}

.btn-modal a {
    display: flex;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
}
/* Button END */

/*Form START*/
.form-container {
    background: var(--grey);
    border-radius: 3px;
    padding: 2.5rem;
    color: var(--white);
    width: 50%;
}

.form-container.section {
    width: 100%;
}

.form-container p {
    text-align: left;
    margin-bottom: 2rem;
}

.forminator-field p {
    margin-bottom: 0;
}

.form-container a {
    color: var(--white);
    text-decoration: underline;
}

.form-container a:hover {
    opacity: 0.8;
}

.form-container form label {
    color: var(--white);
}

.form-container form button {
    margin: 1rem auto 0;
}

fieldset {
    border: none;
}

input,
select,
textarea {
    padding: 1rem;
    margin: 0;
    border: none;
    border-radius: 3px;
    font-family: 'Roboto Flex', sans-serif;
    font-weight: 400;
    background-color: var(--white);
    font-size: 14px;
    transition: border-color 0.3s, box-shadow 0.3s;
    outline: none;
}

input::placeholder,
textarea::placeholder,
select::placeholder {
    color: var(--grey);
}

select {
    appearance: none;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23d4d4d4' viewBox='0 0 24 24'%3E%3Cpath d='M7 10l5 5 5-5H7z'/%3E%3C/svg%3E");
    background-size: 1.5rem auto;
    background-repeat: no-repeat;
    background-position: 100% center;
    outline: none;
    color: var(--black);
}

.form-container input:hover,
.form-container select:hover,
.form-container textarea:hover,
.form-container input:focus,
.form-container select:focus,
.form-container textarea:focus {
    outline: none;
    background-color: var(--grey-extra-light);
    transition: background-color 0.3s, border-color 0.3s;
}

select:required:invalid {
    color: var(--grey);
}

.checkbox {
    margin-right: 0.5rem;
}

.checkbox-label {
    display: flex;
    align-items: center;
    font-size: 14px;
    line-height: 1.3;
}

.checkbox-label-paragraph {
    display: flex;
    align-items: baseline;
    font-size: 14px;
    line-height: 1.3;
}

.forminator-select--field {
    width: 100%;
}

/* Form END */

/*Forminator START*/
.forminator-custom-form {
    width: 100%;
}

.forminator-row {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 0;
    gap: 1rem;
    margin-bottom: 1rem !important;
}

.forminator-ui.forminator-custom-form[data-grid=open] .forminator-col:not(:last-child) {
    margin-bottom: 0 !important;
}

.forminator-ui.forminator-custom-form:not(.forminator-size--small)[data-grid=open] .forminator-row, .forminator-ui.forminator-custom-form:not(.forminator-size--small)[data-grid=open] .forminator-row-inside {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

.forminator-col,
.forminator-field,
.forminator-field input.forminator-input {
    width: 100%;
}

.forminator-col {
    margin: 0 !important;
    padding: 0 !important;
}

.forminator-module-edit-link {
    display: none;
}

.forminator-checkbox__wrapper {
    display: flex;
    justify-content: left;
}

.forminator-consent {
    margin-right: 0.5rem;
}

.forminator-error-message {
    color: red;
}

.forminator-response-message.forminator-error {
    display: none;
}

.forminator-response-message.forminator-show.forminator-success {
    color: var(--primary-color);
    font-size: 1.3rem;
}

.forminator-textarea {
    width: 100%;
}

/*Forminator END*/

.section-row.section-title {
    display: flex;
    flex-direction: column;
    gap: 0;
}

section h1 {
    margin-top: 0;
}

/* Frame START */
.frame {
    display: inline-block;
    padding: 5px;
    border: 1px solid var(--grey);
    border-radius: 3px;
}

.frame img {
    border-radius: 3px;
    display: block;
}

.figcaption {
    font-size: 0.8rem;
    margin: 0 auto;
    padding: 0 1rem;
    font-style: italic;
}
/* Frame END */

/* Swiper START */
.swiper-frame {
    display: block;
    padding: 5px;
    border: 1px solid var(--grey);
    border-radius: 3px;
    max-width: 60rem;
    height: auto;
}

.swiper {
    width: calc(100% - 2rem);
    border-radius: 3px;
}

.swiper-frame .swiper {
    border-radius: 3px;
    display: block;
    width: 100%;
}

.swiper-slide {
    display: flex;
    justify-content: center;
    align-items: center;
}

.swiper-slide img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.swiper-pagination-bullet {
    background: var(--primary-color);
    opacity: 0.5;
}

.swiper-pagination-bullet-active {
    opacity: 1;
}

.swiper-button-prev,
.swiper-button-next {
    color: var(--primary-color);
    background: transparent;
}
/* Swiper END */

/* Photo START */
.section-photo {
    width: auto;
    height: 540px;
}

.section-photo.horisontal {
    height: auto;
    max-height: 400px;
}

/* Photo END */

/* Google Map START */
.google-map,
.google-map iframe {
    margin: 0;
    padding: 0;
    border: 0;
    display: block;
    border-radius: 3px;
}
/* ... */

